Rename test tests.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,8 @@
-name: Test
+name: Tests
 
 on:
   push:
     branches: [master]
-
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
 
 jobs:
   test:
