--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Publish
         run: |
           mkdir -p $HOME/.gem
-          printf -- "---\n:github: Bearer ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
+          cf=$HOME/.gem/credentials
+          cp /dev/null $cf
+          chmod 0600 $cf
+          echo -e "---\n:github: Bearer ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
           gem build *.gemspec
           gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
         env:
